Wed Jun 27 14:13:09 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* NEWS: Updated.

Tue Jun 26 17:34:52 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/extra.i,xapian.i: Add support for spellings_begin(), and
	  add a python-specific term iterator for it, accessed as
	  Database.spellings()

Tue Jun 26 00:56:03 BST 2007  Olly Betts <olly@survex.com>

	* xapian.i: Fix for document.h wrapping.

Tue Jun 26 00:01:38 BST 2007  Olly Betts <olly@survex.com>

	* xapian.i: Parse xapian/postingiterator.h directly.

Mon Jun 25 23:21:45 BST 2007  Olly Betts <olly@survex.com>

	* xapian.i: Parse xapian/document.h directly.

Mon Jun 25 18:07:36 BST 2007  Olly Betts <olly@survex.com>

	* xapian.i: Use "%include <xapian/queryparser.h>" to wrap
	  Xapian::QueryParser, etc.  This adds FLAG_SYNONYM and updates
	  FLAG_MULTIWORD_SYNONYMS.

Sat Jun 23 19:02:51 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xapian.i: Add new synonym_keys_begin() and synonym_keys_end()
	  methods to Database.
	* python/extra.i: Add synonym_keys() python iterator to Database.
	* python/pythontest.py: Test synonym_keys() iterator, and tidy up
	  earlier test for synonyms()

Fri Jun 22 18:43:42 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xapian.i: Add synonym support: new methods on Database and
	  WritableDatabase, and some new flags for the query parser.
	* python/extra.i: Add Database.synonyms, to iterator the synonyms
	  for a term.
	* python/pythontest.py: Add a test for synonym iterators, and clean
	  up after the tests which make their own databases.

Wed Jun 20 21:38:45 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/pythontest.py: Enable the spelling test, and also make it
	  check that spellings can be corrected using a writable database
	  before calling flush().

Wed Jun 20 17:33:17 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/pythontest.py: Add a test of the spelling stuff (at the