@@ -1,3 +1,8 @@
+Wed Jun 27 14:15:15 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* python/pythontest.py: Add tests of the Database.spellings()
+	  iterator.
+
 Wed Jun 27 14:13:09 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* NEWS: Updated.
